[project]
name = "orpheus-next"
version = "0.1.0"
description = "orpheus and further"
readme = "README.md"
authors = [
    { name = "nytopop", email = "ericizoita@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchaudio",
    "snac",
    "asyncstdlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.12.0", "openai", "tqdm"]

[tool.ruff]
line-length = 110
